added some fix